Fix login button small link button

--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -165,7 +165,7 @@
 }
 
 .onlineProfileIcon {
-    fill: var(--channels-default);
+    fill: var(--channel-normal);
     height: 48px;
 }
 
